[package]
name = "mkbviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
num-traits = "0.2"
num-derive = "0.3"
egui = "0.20.1" 
eframe = { version = "0.20.1", features = ["persistence", "dark-light"] }
tracing = "0.1.37"
rfd = "0.10.0"
poll-promise = { version = "0.2.0", features = ["web"] }
futures = "0.3.25"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"

[profile.release]
opt-level = "s"
lto = true
